--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -412,6 +412,7 @@ Instead of merging, the matter bounces off again and again during the final stag
 Such behavior and the high rotational velocity lead the system to eject a big amount of matter, during the ring-down phase (Figures(\ref{f5}) and (\ref{f6})). 
 The matter, that does not overcome the "centrifugal force", is thrown away in a spiralling shape.\\
 The gravitational wave strain contains crucial information about the evoltuion of a system, indeed, it can give a clue on the matter evolution of our binary system.
+As Thorn would say "gravitational waves will show us details of the bulk motion of dense concentrations of energy".[REF ]%
 
 
 %%
