--- a/latex_thesis/production_gw/prod_gw.tex
+++ b/latex_thesis/production_gw/prod_gw.tex
@@ -234,7 +234,7 @@ Notice that the gravitational wave scales as $\sim 1/r$.
 \\
 
 
-\subsubsection{The nature of the gravitational radiation}
+\subsection{The nature of the gravitational radiation}
 The quadrupole formula (\ref{h_TT_quadrupole_formula}) and its derivation gives a  first insight into the properties of the gravitational waves and their sources.\\
 Firstly, the gravitational radiation has a \textbf{quadrupolar nature}, because the GW produced by an isolated nonrelativisitc object is proportional to the second derivative of the reduced quadrupole moment of the energy density. 
 It is possible to justify qualitatively
