--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -66,7 +66,7 @@ So, the accumulated phase shift in each arm will be
 \delta \phi \sim 100 \dfrac{4 \pi \delta L}{\lambda}
 \]
 where $\lambda$ is the wavelength and $\delta L$ is the distance the mirror moves relative to the beam splitter.
-Although we used TT gauge to calculate the above formula, it can be shown that this result is gauge independent.\\
+This phase shift can be measured at the photodiode to an accuracy that is governed by the light’s photon shot noise $\sim 1/\sqrt{N}$, where N is the number of photons that enter the inter- ferometer from the laser.
 %%
 %%
 %%
@@ -213,7 +213,8 @@ h_{R} = \dfrac{1}{\sqrt{2}} (h_{+} - i h_{\times})
 \label{l_polarized}
 h_{L} = \dfrac{1}{\sqrt{2}} (h_{+} + i h_{\times})
 \end{eqnarray}
-The effect of a pure $h_R$ wave would be to rotate the particles in a right-handed sense and similiarly for the left-handed mode $h_{L}$. It is important to stress that the particles do not travel around the ring, they just move in little epicycles.
+The effect of a pure $h_R$ wave would be to rotate the particles in a right-handed sense and similiarly for the left-handed mode $h_{L}$. 
+It is important to stress that the particles do not travel around the ring, they just move in little epicycles.\\
 %%
 %%
 %%
@@ -233,7 +234,13 @@ The effect of a pure $h_R$ wave would be to rotate the particles in a right-hand
 \label{plus_and_times}
 
 \end{figure}
-
+Another remarkable consequence of the plus $+$ and times $\times$ polarizations is that it is possible to relate the polarization states of classical gravitational waves to the kinds of particles we would expect to find upon quantization.
+The spin of a quantized field is directly realted to the transformation properties of that field under spatial rotations.
+For instance, the electromagnetic field has two independent polarization states, which can be described by vectors in the x-y plane, and they are invariant under a rotation by $360 \degree$.
+Upon quantization, the theory yields the photon, a massless spin-1 particle.
+The general rule is that the spin $s$ is related to the angle $\theta$ under which the polarization modes are in invariant by $s = 360 \degree /\theta$.
+Since the gravitational field, whose waves propagate at the speed of light with polarizartion states invariant under rotations of $180 \degree$, should lead to a massless spin-2 particle: the graviton.
+Despite the fact that we are a long way from detecting such particles, any possible quantum theory of gravity should predict their existence with these properties.
 
 
 
