--- a/latex_thesis/einstein_eq/einstein_eq_gw.tex
+++ b/latex_thesis/einstein_eq/einstein_eq_gw.tex
@@ -399,8 +399,8 @@ Considering a plane wave we have
  :R^\mu _{00 \sigma }: = -\dfrac{1}{2} \omega^2 :A^{\T \mu} _{\sigma}: \cos (\omega (t-z))
 \]
 where $\omega$ is the frequency of the plane wave. 
-The curvature is proportional to the square of the frequency, in fact we expect a bigger curvature if the wave oscillates more times per second. 
-Naively, the spacetime is more curved if the ripples of the GW are squeezed in a narrow time interval.
+The curvature is proportional to the square of the frequency, in fact we expect a bigger curvature if the wave oscillates more times per second.
+Neverthless we considered the simple model of a plane wave, we can say, naively, that the spacetime is more curved if the ripples of the GW are squeezed in a narrow time interval.
 Analogously, the electromagnetic field of an oscillating electric dipole is proportional to the square of the frequency, in fact we expect a more intense  field if the charge oscillates more times per second.
 
 
