--- a/latex_thesis/production_gw/prod_gw.tex
+++ b/latex_thesis/production_gw/prod_gw.tex
@@ -329,9 +329,27 @@ h^{\T} _{ij} = \dfrac{8\,G M \,R^{2} \omega^{2}}{c^{4}\, r} \,
 0 & 0 & 0\\
 \end{bmatrix}
 \]
-where we inserted $G$ and $c$ in order to give an estimates of the intensity:
+where we inserted $G$ and $c$ in order to give an estimates of the coefficient.\\
+Two remarkable aspects of the above formula are that the gravitational radiation is emitted at  twice the angular frequency at which the system rotates, and $h_{+} ^{\T}= i h_{\times} ^{\T}$ so the wave is circularly polarized.\\
+We will see again these aspects when we will treat the numerical simulations, but let us now give an order-of-magnitude estimate of the coefficient
 \[
+\mathcal{H} = 
+ \dfrac{8\,G M \,R^{2} \omega^{2}}{c^{4}\, r} \,
 \]
-The gravitational radiation is emitted at  twice the angular frequency at which the system rotates.
-In addition, $h_{+} ^{\T}= i h_{\times} ^{\T}$ so the wave is circularly polarized.\\
-ESTIMATES
+We assume that the two objects to be separated by a distance $R$ equal ten times their Schwarzschild radii $r_s=2 G M/c^{2}$.
+In addition we consider that the two objects have approximately the mass of the Sun $M=M_{\odot}=2\times 10^{30} \kilo \gram $ and they rotate with an angular frequency given by the Kepler's third law $\omega = \sqrt{GM/(4R^{3})}$.
+\bea
+\dfrac{G}{c^{4}} = 8.26 \times 10^{-45} \kilo \gram^{-1} \, \second ^{2} \meter ^{-1} 
+\\
+r_s=2.95 \times 10^{3} \, \meter
+\\
+R  = 10 r_s = 2.95 \times 10 ^{4} \, \meter
+\\
+\omega = 1.13 \time 10 ^{3} \second ^{-1}
+\eea
+Pluging into $\mathcal{H}$ and considering the source at the a cosmological distance $r= 100 \, \mega pc \approx 3.09 \times 10^{24} \meter$ we have
+\[
+\mathcal{H} = 4.79 \times 10^{-23}
+\]
+
+
