--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -4,6 +4,7 @@ We want now to explain the important physical consequences of the theoretical re
 Throughout the next sections we will use the linearized theory of gravitatinal waves and we consider our metric to be in the TT gauge.
 %%in the second section we giva a coordinate-independent measure of the gravitational wave effects.
 \subsection{Free particles and detection principles}
+\label{free_particles_detection_principles}
 In general relativity the trajectory of a free falling particle is described by the \textbf{geodesic equation}
 \begin{equation}
 \label{geodesic_eq}
@@ -58,7 +59,7 @@ The proper distance is streched by the passing gravitational wave and the two pa
 \end{equation}
 The proper distance is a very important quantity which has a crucial experimental use. 
 For instance, a laser interferometer gravitational wave detector consists of four masses that hang from vibration-isolated supports as shown in Figure(\ref{interferometer}).
-When a gravitational wave passes through the detector, it changes the arm-length difference, $\Delta L = L_2 -L_1$, thereby an optical system monitors the separations between the masses in such a way that the variations in the output of the photodiode are directly proportional to $\Delta L$.
+When a gravitational wave passes through the detector, it changes the arm-length difference, thereby an optical system monitors the separations between the masses in such a way that the variations in the output of the photodiode are directly proportional to $\delta L$.
 The value of $\Delta L$ is a composition of the two polarizations of the gravitational wave $h_{+}$ and $h_{\times}$, and it also contains terms that weigh the direction of the GW.
 One adjusts the reflectivities of the interferometer’s corner mirrors such that a typical photon travles up and down the cavity of order 100 times before returning to the beamsplitter and being directed into the photodiode.
 So, the accumulated phase shift in each arm will be
@@ -66,7 +67,7 @@ So, the accumulated phase shift in each arm will be
 \delta \phi \sim 100 \dfrac{4 \pi \delta L}{\lambda}
 \]
 where $\lambda$ is the wavelength and $\delta L$ is the distance the mirror moves relative to the beam splitter.
-This phase shift can be measured at the photodiode to an accuracy that is governed by the light’s photon shot noise $\sim 1/\sqrt{N}$, where N is the number of photons that enter the inter- ferometer from the laser.
+This phase shift can be measured at the photodiode to an accuracy that is governed by the light’s photon shot noise $\sim 1/\sqrt{N}$, where N is the number of photons that enter the interferometer from the laser.
 %%
 %%
 %%
