--- a/latex_thesis/introduction/intro.tex
+++ b/latex_thesis/introduction/intro.tex
@@ -1,3 +1,13 @@
+Albert Einstein developed the General Theory of Relativity between and 1907 and 1917, creating a new tool to observe the universe. 
+The General Theory of Relativity has changed the way we describe and study the gravitational phenomena. 
+In particular, the new theory of gravitation was not only able to solve unexplained observations, as for instance, anomalies in the newtonian description of planets' orbits as Mercury, but it also predictied new  phenomena such as gravitational time dilation, gravitational lensing and gravitational waves.
+The first indirect detection of general relativity was made by Hulse and Taylor.
+One of the most important test of the General Theory of Relativity was the discovery of the gravitational waves (GW) at LIGO.\\
+
+
+
+
+
 \textbf{NOTATION:} we use a system of geometrized units $G=c=1$.\\
 Greek letters for summing over all the indeces from 0 up to 3.
 Latin letters summing only on the spatial indeces 1 2 and 3.
