--- a/latex_thesis/shared/packages.tex
+++ b/latex_thesis/shared/packages.tex
@@ -25,5 +25,5 @@
 \usepackage{fancyhdr}
 \input{shared/package-config/fancyhdr}
 
-\usepackage{mathtools}
-\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
+
+%\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
